2003-12-10  Dominique Devriese  <devriese@kde.org>

	* Fix a crash when using a macro having the moving point of a
	locus as its argument, reported by Marco Zoso.

2003-11-14  Dominique Devriese  <devriese@kde.org>

	* Fix two crashes in TextLabelRedefineMode.

2003-11-10  Dominique Devriese  <devriese@kde.org>

	* bump the version number to 0.6.1

	* Fix bugs #67671 and #67694

2003-10-22  Dominique Devriese  <devriese@kde.org>

	* fix the ArgsParser parsing order, properly this time..

2003-10-09  Dominique Devriese  <devriese@kde.org>

	* make the New Script Wizard give an error when the script does
	not generate a valid ObjectImp.

	* fix some issues with the escaping of an & in a translatable
	string in an xml file

	* fix the generation of the pot translation template file

	* fix a problem with the order of arguments in ScalingOverLineType
	causing a test file to not be loaded correctly..

	* update some test files to the new ( post-0.4 ) kig file format.

	* add ( sometimes placeholder ) icons for the remaining actions
	that missed icons ( thanks to Maurizio Paolini )

2003-09-08  Dominique Devriese  <devriese@kde.org>

	* Fix a bug that prevented Kig from opening its own files,
	rejecting them because they were of the 0.6.0 version, which Kig
	could not open..  I'm backporting this into Kig 0.6.0 and
	informing the packager..

	* clean up: Objects now store their parents in order, so that no
	parsing has to be done in the calc() function..  Also some more
	modifications making that function a bit simpler are included.
	Specifically, ArgsParser now does the checking of the arguments,
	instead of every single calc function doing it itself..

2003-09-02  Dominique Devriese  <devriese@kde.org>

	* rename ArgparserObjectType to ArgsParserObjectType

	* remove ArgsChecker class, and rename ArgParser to ArgsParser

2003-09-02  Dominique Devriese  <devriese@kde.org>

	* branch off Kig 0.6.0

2003-09-01  Dominique Devriese  <devriese@kde.org>
